# keboola_fidoo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: DEVELOPERS.md  ERD.md  SQL_SAMPLES.md
fidoo_driver/: .env.example  .gitignore  README.md  __init__.py  base.py  client.py  exceptions.py  pyproject.toml  requirements.txt  setup.py
fidoo_driver/examples/: README.md  advanced_usage.py  basic_usage.py  batch_processing.py  debug_mode.py  error_handling.py  get_user_cards.py  list_all_users.py  write_operations.py
tests/: test_connection.py  test_debug_response.py  test_duckdb_export.py  test_export_to_csv.py  test_read_all_objects.py  test_read_users.py
